<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- This group represents the items after the Header and before the separator -->
    <group
        android:id="@+id/menu_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/rewards_list_fragment"
            android:icon="@mipmap/ic_local_play_black_24dp"
            android:title="@string/rewards" />
    </group>
    <!-- This group represents the items after the separator -->
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings_fragment"
            android:icon="@mipmap/ic_settings_black_24dp"
            android:title="@string/settings"
            android:visible="false"
            app:showAsAction="always" />
        <item
            android:id="@+id/account_manager_fragment"
            android:icon="@mipmap/ic_verified_user_black_24dp"
            android:title="@string/account_manager" />
        <item
            android:id="@+id/about_us_fragment"
            android:icon="@mipmap/ic_info_black_24dp"
            android:title="@string/about_us" />
        <item
            android:id="@+id/log_out"
            android:icon="@mipmap/ic_power_settings_new_black_24dp"
            android:title="@string/log_out" />
    </group>
</menu>