<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/OrdenEventos">
        <item
            android:id="@+id/ordenarFechaEventos"
            android:title="@string/ordenar_por_fecha">
        </item>
        <item
            android:id="@+id/ordenarPuntosEventos"
            android:title="@string/ordenar_por_puntos">
        </item>
    </group>
    <group
        android:id="@+id/filtrosEventos">
        <item
            android:id="@+id/filtrarTodosEventos"
            android:title="@string/todos">
        </item>
        <item
            android:id="@+id/filtrarCategoriaEventos"
            android:title="@string/fitrar_por_categoria">
        </item>
    </group>
    <item
        android:id="@+id/filter_icon"
        android:icon="@drawable/ic_filter_button"
        android:title="Item"
        app:showAsAction="always" />


</menu>