<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TitleCreateEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/tituloCreateEvent"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/titleCreateEvent_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/TitleCreateEvent"
            android:focusable="true"
            android:hint="@string/titulo_del_evento"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/DescriptionCreateEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleCreateEvent_edit_text"
            android:text="@string/descripcion"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/DescriptionCreateEvent_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/DescriptionCreateEvent"
            android:focusable="true"
            android:hint="@string/descripci_n_del_evento"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/PointsCreateEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/DescriptionCreateEvent_edit_text"
            android:text="@string/puntos"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/PointsCreateEvent_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PointsCreateEvent"
            android:inputType="number"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/DirectionCreateEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PointsCreateEvent_edit_text"
            android:text="@string/direccion"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/DirectionCreateEvent_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/DirectionCreateEvent"
            android:hint="@string/direccion_del_evento"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/CompanyCreateEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/DirectionCreateEvent_edit_text"
            android:text="@string/empresa"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/CompanyCreateEvent_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CompanyCreateEvent"
            android:hint="@string/empresa_del_evento"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/DateTextCreateEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CompanyCreateEvent_edit_text"
            android:text="@string/fecha_evento"
            android:textSize="20sp" />


        <LinearLayout
            android:id="@+id/lineDateCreateEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/DateTextCreateEvent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextDateEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/fecha_del_evento"
                android:inputType="date" />

            <ImageButton
                android:id="@+id/DateCreateEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fecha_del_evento_description"
                app:srcCompat="@android:drawable/ic_menu_my_calendar" />

        </LinearLayout>

        <TextView
            android:id="@+id/TimeTextCreateEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lineDateCreateEvent"
            android:text="@string/hora_evento"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/lineHourCreateEvent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/TimeTextCreateEvent">

            <EditText
                android:id="@+id/HourCreateEvent_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColorHighlight="#ff7eff15"
                android:textColorHint="#000000" />

            <TextView
                android:id="@+id/TwoPointsCreateEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TwoPoints"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/MinCreateEvent_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColorHighlight="#ff7eff15"
                android:textColorHint="#000000" />


        </LinearLayout>

        <Button
            android:id="@+id/buttonSendEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lineHourCreateEvent"
            android:text="@string/guardar" />

    </RelativeLayout>

</ScrollView>
