<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollViewCreateEvent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TitleEditEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tituloCreateEvent"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/titleEditEvent_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/TitleEditEvent"
            android:focusable="true"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/DescriptionEditEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/titleEditEvent_edit_text"
            android:text="@string/description"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/DescriptionEditEvent_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/DescriptionEditEvent"
            android:focusable="true"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/PointsEditEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/DescriptionEditEvent_edit_text"
            android:text="@string/points"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/PointsEditEvent_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/PointsEditEvent"
            android:inputType="number"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/CategoriesEditEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/PointsEditEvent_edit_text"
            android:text="@string/categoria"
            android:textSize="20sp" />
        <Spinner
            android:id="@+id/CategoriesSpinnerEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/CategoriesEditEvent"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="#000000"/>

        <TextView
            android:id="@+id/DirectionEditEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/CategoriesSpinnerEdit"
            android:text="@string/direction"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/DirectionEditEvent_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/DirectionEditEvent"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/CompanyEditEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/DirectionEditEvent_edit_text"
            android:text="@string/company"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/CompanyEditEvent_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/CompanyEditEvent"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/DateTextEditEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/CompanyEditEvent_edit_text"
            android:text="@string/fecha_evento"
            android:textSize="20sp" />


        <LinearLayout
            android:id="@+id/lineDateEditEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/DateTextEditEvent"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/DateEditEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fecha_del_evento_description"
                app:srcCompat="@android:drawable/ic_menu_my_calendar" />

            <EditText
                android:id="@+id/editTextDateEditEvent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.97"
                android:ems="10"
                android:inputType="date" />

        </LinearLayout>

        <TextView
            android:id="@+id/TimeTextEditEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lineDateEditEvent"
            android:text="@string/hora_evento"
            android:textSize="20sp" />


        <LinearLayout
            android:id="@+id/linearLayoutHourEditEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TimeTextEditEvent">

            <EditText
                android:id="@+id/HourEditEvent_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColorHighlight="#ff7eff15"
                android:textColorHint="#000000" />

            <TextView
                android:id="@+id/TwoPointsEditEvent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/TwoPoints"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/MinEditEvent_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textColorHighlight="#ff7eff15"
                android:textColorHint="#000000" />

        </LinearLayout>
        <TextView
            android:id="@+id/ImageEditEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Imagen"
            android:layout_below="@+id/linearLayoutHourEditEvent"
            android:textSize="20sp" />
<LinearLayout
    android:id="@+id/LinearLayoutImageEditEvent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/ImageEditEvent">

    <ImageButton
        android:id="@+id/ImageEditEventButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/imagen_del_evento"
        app:srcCompat="@android:drawable/ic_menu_gallery"  />
    <ImageView
        android:id="@+id/ImageSelectedEditEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>
        <Button
            android:id="@+id/buttonSendEditEvent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/LinearLayoutImageEditEvent"
            android:text="@string/guardar" />
    </RelativeLayout>

</ScrollView>
