<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_oferta_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="20dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TitleEditOferta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TituloCreateOferta"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/titleEditOferta_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/TitleEditOferta"
            android:focusable="true"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/DescriptionEditOferta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/titleEditOferta_edit_text"
            android:text="@string/description"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/DescriptionEditOferta_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/DescriptionEditOferta"
            android:focusable="true"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/DiscountEditOferta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/DescriptionEditOferta_edit_text"
            android:text="@string/descuento"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/PointsEditOferta_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/DiscountEditOferta"
            android:inputType="number"
            android:textColorHighlight="#ff7eff15"
            android:textColorHint="#000000" />

        <TextView
            android:id="@+id/DateTextEditOferta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/PointsEditOferta_edit_text"
            android:text="@string/fecha_evento"
            android:textSize="20sp" />


        <LinearLayout
            android:id="@+id/lineDateEditOferta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/DateTextEditOferta"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageButton
                android:id="@+id/DateEditOferta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fecha_de_la_oferta"
                app:srcCompat="@android:drawable/ic_menu_my_calendar" />

            <EditText
                android:id="@+id/editTextDateEditOferta"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.97"
                android:ems="10"
                android:inputType="date" />
        </LinearLayout>
        <TextView
            android:id="@+id/ImageEditOferta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lineDateEditOferta"
            android:text="@string/Imagen"
            android:textSize="20sp" />
        <LinearLayout
            android:id="@+id/LinearLayoutImageEditOferta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ImageEditOferta">

            <ImageButton
                android:id="@+id/ImageEditOfertaButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagen_de_la_oferta"
                app:srcCompat="@android:drawable/ic_menu_gallery" />

            <ImageView
                android:id="@+id/ImageSelectedEditOferta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/buttonSendEditOferta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/LinearLayoutImageEditOferta"
            android:text="@string/guardar" />
    </RelativeLayout>

</ScrollView>
