<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCEDC8"
    android:orientation="vertical">

    <Switch
        android:id="@+id/switchModeItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:height="50dp"
        android:showText="true"
        android:textOff="@string/eventsSwitch"
        android:textOn="@string/pointsSwitch"
        android:theme="@android:style/Theme.Holo.Light"></Switch>

    <ListView
        android:id="@+id/listViewGivePoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/switchModeItem"
        android:layout_above="@+id/grantPointsToUsers">

    </ListView>

    <Button
        android:id="@+id/grantPointsToUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@android:color/white"
        android:background="@drawable/buttonregisterloginshape"
        android:text="@string/grantPoints"/>

</RelativeLayout>